--- a/app/src/main/res/layout/lines_status_layout.xml
+++ b/app/src/main/res/layout/lines_status_layout.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="16dp">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/tvStatusHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="0dp"
         android:layout_marginBottom="16dp"
+        android:background="@color/colorLineStatusTitle"
         android:gravity="center"
+        android:padding="@dimen/_10sdp"
         android:text="Line Status"
+        android:textColor="@android:color/white"
         android:textSize="20sp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcLineStatus"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/tvStatusHeader" />
+        android:layout_below="@id/tvStatusHeader"
+        />
 
 </RelativeLayout>
