--- a/app/src/main/res/layout/lines_status_layout.xml
+++ b/app/src/main/res/layout/lines_status_layout.xml
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/srlLineStatus"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/tvStatusHeader"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="0dp"
-        android:layout_marginBottom="16dp"
-        android:background="@color/colorLineStatusTitle"
-        android:gravity="center"
-        android:padding="@dimen/_10sdp"
-        android:text="Line Status"
-        android:textColor="@android:color/white"
-        android:textSize="20sp" />
+    <!--
+        <TextView
+            android:id="@+id/tvStatusHeader"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="0dp"
+            android:background="@color/colorLineStatusTitle"
+            android:gravity="center"
+            android:padding="@dimen/_5sdp"
+            android:text="Line Status"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" /> -->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcLineStatus"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/tvStatusHeader"
-        />
-
-</RelativeLayout>
+        android:layout_height="match_parent" />
+</android.support.v4.widget.SwipeRefreshLayout>
