Commit 10 - JSearchDirecText activity starts on showDetail(Journey journeyOption) of JSearchResults

--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -25,8 +25,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/naHeaderContainer"
-        android:layout_marginTop="5dp"
-        android:padding="@dimen/_16sdp" />
+        android:layout_marginTop="0dp"
+        android:background="@color/navBackground"
+        android:padding="@dimen/_5sdp" />
 
 
 </RelativeLayout>
