--- a/app/src/main/res/layout/nav_menu_row_layout.xml
+++ b/app/src/main/res/layout/nav_menu_row_layout.xml
@@ -2,28 +2,30 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="@dimen/_10sdp">
+    android:layout_marginBottom="@dimen/_5sdp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="wrap_content"
+        android:minHeight="@dimen/_50sdp">
 
         <ImageView
             android:id="@+id/ivNavMenuIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:src="@drawable/city_railway_station" />
 
         <TextView
             android:id="@+id/tvNavMenuItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/ivNavMenuIcon"
-            android:textSize="20sp"
-            android:minHeight="@dimen/_35sdp"
             android:gravity="center_vertical"
+            android:minHeight="@dimen/_40sdp"
+            android:paddingLeft="@dimen/_5sdp"
             android:text="@string/testText"
-            android:paddingLeft="@dimen/_5sdp"/>
+            android:textSize="20sp" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
