--- a/app/src/main/res/layout/jsearch_result_matched_cardview_layout.xml
+++ b/app/src/main/res/layout/jsearch_result_matched_cardview_layout.xml
@@ -2,19 +2,21 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="@dimen/_6sdp"
+    android:layout_margin="@dimen/_10sdp"
     android:orientation="vertical"
-    android:padding="@dimen/_5sdp">
+    android:padding="@dimen/_10sdp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:padding="@dimen/_6sdp">
 
         <TextView
             android:id="@+id/tvJSearchResultName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Title"
+            android:textColor="@color/primary_text"
             android:textSize="17sp" />
 
         <TextView
@@ -22,7 +24,8 @@
             android:layout_width="@dimen/_100sdp"
             android:layout_height="wrap_content"
             android:layout_below="@id/tvJSearchResultName"
-            android:text="Start" />
+            android:text="Start"
+            android:textColor="@color/primary_text" />
 
         <TextView
             android:id="@+id/tvJSearchResultStartValue"
@@ -31,7 +34,8 @@
             android:layout_below="@id/tvJSearchResultName"
             android:layout_marginLeft="@dimen/_5sdp"
             android:layout_toRightOf="@id/tvJSearchResultStart"
-            android:text="17:00:00" />
+            android:text="17:00:00"
+            android:textColor="@color/primary_text" />
 
 
         <TextView
@@ -39,7 +43,8 @@
             android:layout_width="@dimen/_100sdp"
             android:layout_height="wrap_content"
             android:layout_below="@id/tvJSearchResultStart"
-            android:text="Duration" />
+            android:text="Duration"
+            android:textColor="@color/primary_text" />
 
         <TextView
             android:id="@+id/tvJSearchResultDurationValue"
@@ -48,14 +53,16 @@
             android:layout_below="@id/tvJSearchResultStartValue"
             android:layout_marginLeft="@dimen/_5sdp"
             android:layout_toRightOf="@id/tvJSearchResultDuration"
-            android:text="50MINS" />
+            android:text="50MINS"
+            android:textColor="@color/primary_text" />
 
         <TextView
             android:id="@+id/tvJSearchResultChangeCount"
             android:layout_width="@dimen/_100sdp"
             android:layout_height="wrap_content"
             android:layout_below="@id/tvJSearchResultDuration"
-            android:text="No of Changes" />
+            android:text="No of Changes"
+            android:textColor="@color/primary_text" />
 
         <TextView
             android:id="@+id/tvJSearchResultChangesValue"
@@ -64,14 +71,16 @@
             android:layout_below="@id/tvJSearchResultDuration"
             android:layout_marginLeft="@dimen/_5sdp"
             android:layout_toRightOf="@id/tvJSearchResultChangeCount"
-            android:text="5" />
+            android:text="5"
+            android:textColor="@color/primary_text" />
 
         <TextView
             android:id="@+id/tvJSearchResultChangesDetail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tvJSearchResultChangeCount"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textColor="@color/primary_text" />
 
     </RelativeLayout>
 
