--- a/app/src/main/res/layout/jsearch_result_matched_options_layout.xml
+++ b/app/src/main/res/layout/jsearch_result_matched_options_layout.xml
@@ -2,7 +2,8 @@
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/srlJourneyResultsRefresh"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="@dimen/_16sdp">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcJSearchResults"
