--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+
     <color name="colorLineStatusTitle">#2D3039</color>
     <color name="colorBakerloo">#B36305</color>
     <color name="colorCentral">#E32017</color>
@@ -20,4 +21,16 @@
     <color name="colorVictoria">#0098D4</color>
     <color name="colorWaterlooCity">#95CDBA</color>
     <color name="colorTflRail">#7156A5</color>
+    <color name="navBackground">#FFFFFF</color>
+    <!--  Downloaded Theme Colors thanks to Hurman -->
+
+    <color name="primary">#607D8B</color>
+    <color name="primary_dark">#455A64</color>
+    <color name="primary_light">#CFD8DC</color>
+    <color name="accent">#9E9E9E</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#727272</color>
+    <color name="icons">#FFFFFF</color>
+    <color name="divider">#B6B6B6</color>
+
 </resources>
