--- a/app/src/main/res/layout/jsearch_direction_text_cardview_layout.xml
+++ b/app/src/main/res/layout/jsearch_direction_text_cardview_layout.xml
@@ -1,52 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayoutdown_arrow.png xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/_16sdp">
+    android:layout_marginLeft="@dimen/_16sdp"
+    android:layout_marginRight="@dimen/_16sdp"
+    android:background="@color/cardview_light_background">
 
-    <TextView
-        android:id="@+id/tvDirStopPointName"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="@dimen/_50sdp" />
+        android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvDirStopPointName"
-        android:orientation="horizontal"
-        android:weightSum="100">
-<!--
-        <RelativeLayout
-            android:id="@+id/tvDirArrow"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/tvDirStopPointName"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="30"
-            android:minHeight="@dimen/_60sdp">
+            android:gravity="center"
+            android:minHeight="@dimen/_50sdp"
+            android:text="@string/testText"
+            android:textColor="@color/primary_text" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvDirStopPointName"
+            android:minHeight="@dimen/_40sdp"
+            android:orientation="horizontal"
+            android:weightSum="100">
+            <!--
+                    <RelativeLayout
+                        android:id="@+id/tvDirArrow"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="30"
+                        android:minHeight="@dimen/_60sdp">
+
+                        <TextView
+                            android:layout_width="@dimen/_30sdp"
+                            android:layout_height="wrap_content"
+                            android:background="@color/colorDlr" />
+
+                        <ImageView
+                            android:layout_width="@dimen/_30sdp"
+                            android:layout_height="@dimen/_25sdp"
+                            android:src="@drawable/down_arrow" />
+
+                    </RelativeLayout>
+
+            -->
+            <TextView
+                android:id="@+id/tvDirLineArror"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:textColor="@color/primary_text" />
 
             <TextView
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="wrap_content"
-                android:background="@color/colorDlr" />
-
-            <ImageView
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_25sdp"
-                android:src="@drawable/down_arrow" />
-
-        </RelativeLayout>
-
--->
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:id="@+id/tvDirLineArror"
-            android:layout_weight="10"/>
-        <TextView
-            android:id="@+id/tvDirLineStopInfo"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="90" />
-    </LinearLayout>
-
-</RelativeLayoutdown_arrow.png>
+                android:id="@+id/tvDirLineStopInfo"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="97"
+                android:gravity="center"
+                android:textColor="@color/primary_text" />
+        </LinearLayout>
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
