Commit 12 - Still fixing database

--- a/app/src/main/res/layout/jsearch_direction_text_layout.xml
+++ b/app/src/main/res/layout/jsearch_direction_text_layout.xml
@@ -4,6 +4,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcJSearchDirText"
         android:layout_width="match_parent"
