--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -6,14 +6,14 @@
     <RelativeLayout
         android:id="@+id/naHeaderContainer"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_height="@dimen/_120sdp"
         android:layout_alignParentTop="true"
         android:background="@color/colorPrimary">
 
         <ImageView
             android:id="@+id/ivNavHeaderPic"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="@dimen/_70sdp"
+            android:layout_height="@dimen/_70sdp"
             android:layout_centerInParent="true"
             android:scaleType="fitCenter"
             android:src="@drawable/train" />
