--- a/app/src/main/res/layout/line_status_cardview.xml
+++ b/app/src/main/res/layout/line_status_cardview.xml
@@ -46,8 +46,10 @@
             <TextView
                 android:id="@+id/tvStatusDetail"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center" />
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:minHeight="@dimen/_150sdp"
+                />
         </LinearLayout>
     </RelativeLayout>
 
